# WB_feedback

./: .gitignore  README.md  pyproject.toml
src/marketplace_reviews/: aggregation.py  app.py  cli.py  export.py  models.py
src/marketplace_reviews/parsers/: base.py  wildberries.py
src/marketplace_reviews/templates/: index.html
