[project]
name = "marketplace-reviews"
version = "0.1.0"
description = "Collect product reviews from marketplaces (Wildberries) and build weekly rating time series"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.scripts]
mp-reviews = "marketplace_reviews.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
