[project]
name = "marketplace-reviews"
version = "0.1.0"
description = "Collect product reviews from marketplaces (Wildberries) and build weekly rating time series"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "flask>=3.0",
]

[project.scripts]
mp-reviews = "marketplace_reviews.cli:main"
mp-reviews-web = "marketplace_reviews.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
